[package]
name = "multihash"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]

[features]
default = []
validation = []
generation = []
sha2 = ["sodiumoxide"]
parse = ["base58", "error-chain"]
display = ["base58"]
all = ["validation", "generation", "sha2", "parse", "display"]

[dependencies]
base58 = { git = "https://github.com/Nemo157/base58-rs", optional = true }
error-chain = { version = "0.5.0", optional = true }
sodiumoxide = { version = "*", optional = true }
