[package]
name = "multihash"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]

[features]
default = []
validation = []
generation = []
sha2 = ["sodiumoxide"]
parse = ["bs58", "error-chain"]
display = ["bs58"]
all = ["validation", "generation", "sha2", "parse", "display"]

[dependencies]
bs58 = { version = "0.1.2", optional = true }
error-chain = { version = "0.5.0", optional = true }
sodiumoxide = { version = "*", optional = true }
varmint = "0.1.1"
