[package]
name = "mhash"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]

description = "An implementation of the multihash format used in IPFS"

repository = "https://github.com/mycorrhiza/mhash-rs"

readme = "README.md"
keywords = ["multihash", "multiformats", "hash", "sha"]

license = "MIT/Apache-2.0"

[features]
default = ["io", "str", "vec"]
io = ["varmint"]
vec = ["varmint"]
str = ["bs58", "vec"]
validation = []
generation = []
sha2 = ["sodiumoxide"]
all = ["validation", "generation", "sha2", "str", "vec", "io"]

[dependencies]
bs58 = { version = "0.1.2", optional = true }
error-chain = { version = "0.5.0" }
sodiumoxide = { version = "0.0.10", optional = true }
varmint = { version = "0.1.1", optional = true }
